<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/display_picturelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/display_picture"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/alert_dark_frame" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/display_picture"
                android:gravity="center_horizontal"
                android:text="@string/displayname"
                android:textColor="@color/colorAccent"
                android:textSize="35sp" />

            <RelativeLayout
                android:id="@+id/genderlayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/genderstatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/gender2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/genderstatic"
                    android:text="@string/gender"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/emaillayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/genderlayout"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/email2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/email"
                    android:text="@string/email"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/locationlayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/emaillayout"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/location2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/location"
                    android:text="@string/dob"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phonelayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/locationlayout"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/phone"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/phone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/phone"
                    android:text="@string/phone"
                    android:textSize="15sp" />
            </RelativeLayout>


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>